0.2:
- Implemented bilinear scaling in pure SDL mode - Mika
- Planet surface is now smoothed, from PhracturedBlue
- Implemented scanlines in pure SDL mode - Mika
- Star sizes and colors are now correct in solar system, from fOSSiL
- Captain portraits in melee are now updated properly after battle and
  bottom portrait always stays in correct place, from fOSSiL
- Removed 2xSaI and SuperSAI scaling due to GPL incompatiblities.
  They should be reimplemented later.
- Bucks print from wrong team in melee ship selection box fixed, from fOSSiL
- Autopilot works in Quasispace when without fuel, from fOSSiL.
- Negative shift warnings removed, from Fizban
- Displaying correct lander images, from fOSSiL.
- 3D planet now uses phong lighting, from PhracturedBlue
- Put save data and temporary files in a seperate dir - SvdB
- Fix OpenGL colors on big-endian CPUs, from Bryce McKinlay
- MikMod now loops modules correctly (OpenAL), from Nic
- player.fon/42.png corrected, from Parker
- GraphicsSem usage reverted back in RotatePlanet, from PhracturedBlue
- Pause/exit game dialog problem with planets fixed, from PhracturedBlue
- Fixed lockup if sbuf_size was zero (OpenAL)
- Planet surface changing color when using device fixed, from PhracturedBlue
- Some race conditions eliminated, from PhracturedBlue
- Earth / other slave shielded planet color issue fixed, from PhracturedBlue
- Orbit/starmap related lockup fixed, from PhracturedBlue
- 3D planet showing on starmap when in orbit fixed, from PhracturedBlue
- Scan (single, interrupting) fixed, from PhracturedBlue
- Defining DCQ_OF_DOOM lowers the DrawCommandQueue size to 512, to aid in
  simulating severe overload stresses on the machine
- Removed TFB_FlushGraphics' dependency on GraphicsSem, which the new
  condition variable code both breaks and makes unnecessary
- Scan tint is now cleared right after the scan, from PhracturedBlue
- Recoded the DCQ to not sit on the heap, added debugging info